frontend/src/UserTable.css
.UserTable {
  background-color: white;
  flex: auto;
  overflow-x: scroll;
  align-self: center;
  border-radius: 1rem;
  box-shadow: 0 2px 8px #0000001A;
  width: 80%;
  margin: 1rem;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.UserTable::-webkit-scrollbar {
  display: none;
}

.UserTable .container-horizontal-scroll {
  flex: auto;
  overflow-x: scroll;
  display: flex;
}

.UserTable .container-horizontal-scroll::-webkit-scrollbar {
  display: none;
}

.UserTable table {
  width: 100%;
  border-collapse: collapse;
  margin-left: 1rem;
  margin-right: 1rem;
}

.UserTable tr:first-child {
  position: sticky;
  top: 0;
  background: white;
  z-index: 1;
}

.UserTable tr {
  height: 4rem;
  border-bottom: 1px solid lightgray;
}

.UserTable td, th {
  position: relative;
  padding: 0.5rem;
}

.UserTable .container-input {
  position: absolute;
  display: inline-block;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
}

.UserTable input {
  text-align: center;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  border: none;
  font-size: inherit;
  font-family: inherit;
}

.UserTable input:focus {
  outline: none;
}

.UserTable img {
  height: 4rem;
  border-radius: 0.5rem;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.UserTable .checkbox-is-active {
  color: red;
  background-color: red;
}

.UserTable .container-btns {
  display: flex;
  flex-direction: column;
}

.UserTable .container-btns :first-child {
  margin-bottom: 0.25rem;
}

.UserTable .pageselector {
  padding: 0.5rem;
}

.UserTable .btn-page.inactive {
  color: blue;
  text-decoration: underline;
  cursor: pointer;
}

@media (max-width: 768px) {
  .UserTable {
    width: 100%;
    margin: 0;
    border-radius: 0;
  }

  .UserTable tr:first-child {
    position: static;
  }
}

